# Api_gateway/pkg/router/gig.go
@@ -12,4 +12,12 @@ func GigRouters(r fiber.Router, handller *handler.GigHandler) {
 	r.Put("/:id", middleware.Auth(Role), handller.UpdaeteGig)
 	r.Delete("/:GigID", middleware.Auth(Role), handller.DeleteGig)
 	r.Post("/order/:GigID", middleware.Auth(Role), handller.CreateOrder)
+	r.Post("/quotes/:GigID", middleware.Auth(Role), handller.CreateQuote)
+	r.Get("/quotes", middleware.Auth(Role), handller.GetAllQuote)
+	r.Post("/custom", middleware.Auth(Role), handller.CreateCustomGig)
+	r.Get("/offers", middleware.Auth(Role), handller.GetAllOffers)
+	r.Post("/offers/:GigID", middleware.Auth(Role), handller.CreateOfferOrder)
+	r.Get("/requests", middleware.Auth(Role), handller.GetAllOrdersRequest)
+	r.Post("/:order_id/accept",middleware.Auth(Role),handller.AccepteOrder)
+	r.Post("/:order_id/reject",middleware.Auth(Role),handller.RejectOrder)
 }
